cookbooks/docusaurus/infra/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "docusaurus"
  labels:
    app.kubernetes.io/instance: "docusaurus"
    app.kubernetes.io/name: "docusaurus"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "docusaurus"
      app.kubernetes.io/instance: "docusaurus"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "docusaurus"
        app.kubernetes.io/instance: "docusaurus"
    spec:
      containers:
        - name: "docusaurus"
          image: "zeusfyi/docusaurus:latest"
          volumeMounts:
            - mountPath: "/scripts"
              name: "cm-docusaurus"
          imagePullPolicy: Always
          command: [ "/bin/sh" ]
          args: [ "yarn","start" ]
          ports:
            - name: "http"
              containerPort: 3000
              protocol: "TCP"
          livenessProbe:
            initialDelaySeconds: 60
            periodSeconds: 120
            tcpSocket:
              port: http
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 10
            tcpSocket:
              port: http
          resources:
            { }
      volumes:
        - name: cm-docusaurus
          configMap:
            name: cm-docusaurus
            defaultMode: 0744
      nodeSelector:
        { }
      affinity:
        { }
      tolerations:
        [ ]
